[gd_scene load_steps=28 format=2]

[ext_resource path="res://addons/sade/editor_gizmo_texture.png" type="Texture" id=1]
[ext_resource path="res://button_change_scene.gd" type="Script" id=2]
[ext_resource path="res://example_player.gd" type="Script" id=3]
[ext_resource path="res://addons/sade/ik_look_at.gd" type="Script" id=4]
[ext_resource path="res://addons/sade/ik_look_at.png" type="Texture" id=5]
[ext_resource path="res://addons/sade/ik_fabrik.gd" type="Script" id=6]
[ext_resource path="res://addons/sade/ik_fabrik.png" type="Texture" id=7]
[ext_resource path="res://weapon_pistol.dae" type="PackedScene" id=8]
[ext_resource path="res://gun_color.tres" type="Material" id=9]
[ext_resource path="res://gun_emission.tres" type="Material" id=10]
[ext_resource path="res://godot_battle_bot.dae" type="PackedScene" id=11]
[ext_resource path="res://battle_bot_color.tres" type="Material" id=12]
[ext_resource path="res://battle_bot_emission.tres" type="Material" id=13]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 40, 40 )

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 1 )
roughness = 0.2
uv1_scale = Vector3( 0.25, 0.25, 0.25 )
uv1_triplanar = true

[sub_resource type="BoxShape" id=3]
extents = Vector3( 20, 1, 20 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 4, 4, 4 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.148438, 1, 0, 1 )
albedo_texture = ExtResource( 1 )
uv1_triplanar = true

[sub_resource type="BoxShape" id=6]
extents = Vector3( 2, 2, 2 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0, 0.882813, 1, 1 )
albedo_texture = ExtResource( 1 )
uv1_triplanar = true

[sub_resource type="ProceduralSky" id=8]
sky_top_color = Color( 0.0470588, 0.454902, 0.976471, 1 )
sky_horizon_color = Color( 0.556863, 0.823529, 0.909804, 1 )
sky_curve = 0.25
ground_bottom_color = Color( 0.101961, 0.145098, 0.188235, 1 )
ground_horizon_color = Color( 0.482353, 0.788235, 0.952941, 1 )
ground_curve = 0.01
sun_energy = 16.0

[sub_resource type="Environment" id=9]
background_mode = 2
background_sky = SubResource( 8 )
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.4
ambient_light_sky_contribution = 0.0
fog_depth_begin = 20.0
fog_depth_curve = 0.406126
fog_transmit_enabled = true
tonemap_mode = 3
ss_reflections_max_steps = 32
ssao_enabled = true
ssao_light_affect = 1.0
ssao_quality = 1
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/5 = false
glow_intensity = 0.6
glow_bloom = 0.06
glow_blend_mode = 0

[sub_resource type="CapsuleShape" id=10]
radius = 2.0
height = 10.0

[sub_resource type="Curve3D" id=11]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -2.43129, -0.955339, 0, 0, 0, 0, 0, 0, 0, -0.670561, 0.183959, 0, 0, 0, 0, 0, 0, 0, 0.64629, 0.228347, 0, 0, 0, 0, 0, 0, 0, 2.31825, -0.925747, 0 ),
"tilts": PoolRealArray( 0, 0, 0, 0 )
}

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath("Lean_Path/PathFollow/IK_LookAt_Chest/Aim_pos:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.570504, -2.2654, 2.93826 ), Vector3( 0, -1.36445, 3.78817 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Lean_Path/PathFollow/IK_LookAt_Chest/Aim_pos:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -2, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Lean_Path/PathFollow/IK_LookAt_Chest/Camera:fov")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 80.0, 60.0 ]
}

[sub_resource type="Animation" id=13]
tracks/0/type = "value"
tracks/0/path = NodePath("Lean_Path/PathFollow/IK_LookAt_Chest/Camera:fov")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 60.0, 80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Lean_Path/PathFollow/IK_LookAt_Chest/Aim_pos:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -1.36445, 3.78817 ), Vector3( 0.570504, -2.2654, 2.93826 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Lean_Path/PathFollow/IK_LookAt_Chest/Aim_pos:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -2, 0 ) ]
}

[sub_resource type="Animation" id=14]
tracks/0/type = "value"
tracks/0/path = NodePath("Lean_Path/PathFollow/IK_LookAt_Chest/Aim_pos:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.570504, -2.2654, 2.93826 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Lean_Path/PathFollow/IK_LookAt_Chest/Aim_pos:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -2, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Lean_Path/PathFollow/IK_LookAt_Chest/Camera:fov")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 80.0 ]
}

[node name="LookAt_IK" type="Spatial"]

[node name="Level" type="Spatial" parent="."]

[node name="Floor_plane" type="MeshInstance" parent="Level"]
editor/display_folded = true
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="Level/Floor_plane"]
editor/display_folded = true

[node name="CollisionShape" type="CollisionShape" parent="Level/Floor_plane/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.956119, 0 )
shape = SubResource( 3 )

[node name="Walls" type="Spatial" parent="Level"]
editor/display_folded = true

[node name="LargeWall" type="MeshInstance" parent="Level/Walls"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 10, 0, 0, 0, 10, -40.2777, 20.1853, 20.0892 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="Level/Walls/LargeWall"]

[node name="CollisionShape" type="CollisionShape" parent="Level/Walls/LargeWall/StaticBody"]
shape = SubResource( 6 )

[node name="LargeWall2" type="MeshInstance" parent="Level/Walls"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 10, 0, 0, 0, 10, -40.2777, 20.1853, -19.9108 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="Level/Walls/LargeWall2"]

[node name="CollisionShape" type="CollisionShape" parent="Level/Walls/LargeWall2/StaticBody"]
shape = SubResource( 6 )

[node name="LargeWall3" type="MeshInstance" parent="Level/Walls"]
editor/display_folded = true
transform = Transform( -4.37114e-008, 0, -10, 0, 10, 0, 1, 0, -4.37114e-007, -19.2777, 20.1853, -40.9108 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="Level/Walls/LargeWall3"]

[node name="CollisionShape" type="CollisionShape" parent="Level/Walls/LargeWall3/StaticBody"]
shape = SubResource( 6 )

[node name="LargeWall4" type="MeshInstance" parent="Level/Walls"]
editor/display_folded = true
transform = Transform( -4.37114e-008, 0, -10, 0, 10, 0, 1, 0, -4.37114e-007, 20.7223, 20.1853, -40.9108 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="Level/Walls/LargeWall4"]

[node name="CollisionShape" type="CollisionShape" parent="Level/Walls/LargeWall4/StaticBody"]
shape = SubResource( 6 )

[node name="LargeWall5" type="MeshInstance" parent="Level/Walls"]
editor/display_folded = true
transform = Transform( -1, 0, 8.74228e-007, 0, 10, 0, -8.74228e-008, 0, -10, 40.7223, 20.1853, -19.9108 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="Level/Walls/LargeWall5"]

[node name="CollisionShape" type="CollisionShape" parent="Level/Walls/LargeWall5/StaticBody"]
shape = SubResource( 6 )

[node name="LargeWall6" type="MeshInstance" parent="Level/Walls"]
editor/display_folded = true
transform = Transform( -1, 0, 8.74228e-007, 0, 10, 0, -8.74228e-008, 0, -10, 40.7223, 20.1853, 20.0892 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="Level/Walls/LargeWall6"]

[node name="CollisionShape" type="CollisionShape" parent="Level/Walls/LargeWall6/StaticBody"]
shape = SubResource( 6 )

[node name="LargeWall7" type="MeshInstance" parent="Level/Walls"]
editor/display_folded = true
transform = Transform( 1.31134e-007, 0, 10, 0, 10, 0, -1, 0, 1.31134e-006, 20.7223, 20.1853, 40.0892 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="Level/Walls/LargeWall7"]

[node name="CollisionShape" type="CollisionShape" parent="Level/Walls/LargeWall7/StaticBody"]
shape = SubResource( 6 )

[node name="LargeWall8" type="MeshInstance" parent="Level/Walls"]
editor/display_folded = true
transform = Transform( 1.31134e-007, 0, 10, 0, 10, 0, -1, 0, 1.31134e-006, -19.2777, 20.1853, 40.0892 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="Level/Walls/LargeWall8"]

[node name="CollisionShape" type="CollisionShape" parent="Level/Walls/LargeWall8/StaticBody"]
shape = SubResource( 6 )

[node name="Wall" type="MeshInstance" parent="Level/Walls"]
editor/display_folded = true
transform = Transform( 7.54979e-008, 0, 4, 0, 4, 0, -1, 0, 3.01992e-007, -10.2777, 8.18532, 21.7815 )
mesh = SubResource( 4 )
material/0 = SubResource( 7 )

[node name="StaticBody" type="StaticBody" parent="Level/Walls/Wall"]

[node name="CollisionShape" type="CollisionShape" parent="Level/Walls/Wall/StaticBody"]
shape = SubResource( 6 )

[node name="Wall2" type="MeshInstance" parent="Level/Walls"]
editor/display_folded = true
transform = Transform( 1, 0, -4.76837e-007, 0, 4, 0, 1.19209e-007, 0, 4, -20.2777, 8.18532, 15.7815 )
mesh = SubResource( 4 )
material/0 = SubResource( 7 )

[node name="StaticBody" type="StaticBody" parent="Level/Walls/Wall2"]

[node name="CollisionShape" type="CollisionShape" parent="Level/Walls/Wall2/StaticBody"]
shape = SubResource( 6 )

[node name="Wall3" type="MeshInstance" parent="Level/Walls"]
editor/display_folded = true
transform = Transform( 1, 0, -4.76837e-007, 0, 4, 0, 1.19209e-007, 0, 4, -20.2777, 8.18532, -0.218508 )
mesh = SubResource( 4 )
material/0 = SubResource( 7 )

[node name="StaticBody" type="StaticBody" parent="Level/Walls/Wall3"]

[node name="CollisionShape" type="CollisionShape" parent="Level/Walls/Wall3/StaticBody"]
shape = SubResource( 6 )

[node name="Wall4" type="MeshInstance" parent="Level/Walls"]
editor/display_folded = true
transform = Transform( 1, 0, -4.76837e-007, 0, 4, 0, 1.19209e-007, 0, 4, -20.2777, 8.18532, -22.2185 )
mesh = SubResource( 4 )
material/0 = SubResource( 7 )

[node name="StaticBody" type="StaticBody" parent="Level/Walls/Wall4"]

[node name="CollisionShape" type="CollisionShape" parent="Level/Walls/Wall4/StaticBody"]
shape = SubResource( 6 )

[node name="Wall5" type="MeshInstance" parent="Level/Walls"]
editor/display_folded = true
transform = Transform( -1.62921e-007, 0, -4, 0, 4, 0, 1, 0, -6.51683e-007, -10.2777, 8.18532, -28.2185 )
mesh = SubResource( 4 )
material/0 = SubResource( 7 )

[node name="StaticBody" type="StaticBody" parent="Level/Walls/Wall5"]

[node name="CollisionShape" type="CollisionShape" parent="Level/Walls/Wall5/StaticBody"]
shape = SubResource( 6 )

[node name="Wall6" type="MeshInstance" parent="Level/Walls"]
editor/display_folded = true
transform = Transform( -1, 0, 8.26528e-007, 0, 4, 0, -2.06632e-007, 0, -4, -0.277681, 8.18532, -22.2185 )
mesh = SubResource( 4 )
material/0 = SubResource( 7 )

[node name="StaticBody" type="StaticBody" parent="Level/Walls/Wall6"]

[node name="CollisionShape" type="CollisionShape" parent="Level/Walls/Wall6/StaticBody"]
shape = SubResource( 6 )

[node name="Wall7" type="MeshInstance" parent="Level/Walls"]
editor/display_folded = true
transform = Transform( -1.62921e-007, 0, -4, 0, 4, 0, 1, 0, -6.51683e-007, 9.72232, 8.18532, -16.2185 )
mesh = SubResource( 4 )
material/0 = SubResource( 7 )

[node name="StaticBody" type="StaticBody" parent="Level/Walls/Wall7"]

[node name="CollisionShape" type="CollisionShape" parent="Level/Walls/Wall7/StaticBody"]
shape = SubResource( 6 )

[node name="Wall8" type="MeshInstance" parent="Level/Walls"]
editor/display_folded = true
transform = Transform( -1.62921e-007, 0, -4, 0, 4, 0, 1, 0, -6.51683e-007, 30.7223, 8.18532, -16.2185 )
mesh = SubResource( 4 )
material/0 = SubResource( 7 )

[node name="StaticBody" type="StaticBody" parent="Level/Walls/Wall8"]

[node name="CollisionShape" type="CollisionShape" parent="Level/Walls/Wall8/StaticBody"]
shape = SubResource( 6 )

[node name="Wall9" type="MeshInstance" parent="Level/Walls"]
editor/display_folded = true
transform = Transform( 1, 0, -4.76837e-007, 0, 4, 0, 1.19209e-007, 0, 4, 24.7223, 8.18532, -26.2185 )
mesh = SubResource( 4 )
material/0 = SubResource( 7 )

[node name="StaticBody" type="StaticBody" parent="Level/Walls/Wall9"]

[node name="CollisionShape" type="CollisionShape" parent="Level/Walls/Wall9/StaticBody"]
shape = SubResource( 6 )

[node name="Wall10" type="MeshInstance" parent="Level/Walls"]
editor/display_folded = true
transform = Transform( 0.573577, 0, 3.27661, 0, 4, 0, -0.819152, 0, 2.29431, 22.7223, 8.18532, 2.78149 )
mesh = SubResource( 4 )
material/0 = SubResource( 7 )

[node name="StaticBody" type="StaticBody" parent="Level/Walls/Wall10"]

[node name="CollisionShape" type="CollisionShape" parent="Level/Walls/Wall10/StaticBody"]
shape = SubResource( 6 )

[node name="Wall11" type="MeshInstance" parent="Level/Walls"]
editor/display_folded = true
transform = Transform( -0.819152, 0, 2.29431, 0, 4, 0, -0.573577, 0, -3.27661, 21.9346, 8.18532, 14.4933 )
mesh = SubResource( 4 )
material/0 = SubResource( 7 )

[node name="StaticBody" type="StaticBody" parent="Level/Walls/Wall11"]

[node name="CollisionShape" type="CollisionShape" parent="Level/Walls/Wall11/StaticBody"]
shape = SubResource( 6 )

[node name="Wall12" type="MeshInstance" parent="Level/Walls"]
editor/display_folded = true
transform = Transform( -0.627507, 2.10616, 2.29431, 0.642788, 3.06418, 0, -0.439385, 1.47475, -3.27661, 14.5622, 8.18532, 9.33115 )
mesh = SubResource( 4 )
material/0 = SubResource( 7 )

[node name="StaticBody" type="StaticBody" parent="Level/Walls/Wall12"]

[node name="CollisionShape" type="CollisionShape" parent="Level/Walls/Wall12/StaticBody"]
shape = SubResource( 6 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.388878, -0.754027, 0.529355, 0, 0.574581, 0.818448, -0.921289, -0.318277, 0.223442, -9.77531, 11.5204, 11.766 )
light_color = Color( 1, 0.925598, 0.820313, 1 )
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 9 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel" type="Panel" parent="Control"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_left = -2.0
margin_top = 530.0
margin_right = 1028.0
margin_bottom = 600.0

[node name="Label" type="Label" parent="Control/Panel"]
margin_left = 12.0
margin_top = 10.0
margin_right = 1012.0
margin_bottom = 41.0
text = "Example use case: Dynamic FPS Animations
Controls: WASD/Arrows to move, left click to fire, right click to look down sighs, Q/E to lean left/right
Escape to free/lock mouse cursor"
align = 1
valign = 1

[node name="Button_Next" type="Button" parent="Control"]
margin_left = 10.0
margin_top = 540.0
margin_right = 129.0
margin_bottom = 590.0
text = "Previous scene"
script = ExtResource( 2 )
scene_to_change_to = "res://fabrik_ik.tscn"

[node name="Crosshair" type="Control" parent="Control"]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 492.0
margin_top = 280.0
margin_right = 532.0
margin_bottom = 320.0

[node name="ColorRect" type="ColorRect" parent="Control/Crosshair"]
margin_left = 19.0
margin_right = 21.0
margin_bottom = 40.0

[node name="ColorRect2" type="ColorRect" parent="Control/Crosshair"]
margin_left = 40.0
margin_top = 18.0
margin_right = 42.0
margin_bottom = 58.0
rect_rotation = 90.0

[node name="KinematicBody" type="KinematicBody" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 7, 0 )
shape = SubResource( 10 )

[node name="CameraHolder" type="Spatial" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13, 0 )

[node name="Lean_Path" type="Path" parent="KinematicBody/CameraHolder"]
editor/display_folded = true
curve = SubResource( 11 )

[node name="PathFollow" type="PathFollow" parent="KinematicBody/CameraHolder/Lean_Path"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0412404, 0.205172, 0 )
offset = 2.71865
rotation_mode = 0
loop = false

[node name="IK_LookAt_Chest" type="Spatial" parent="KinematicBody/CameraHolder/Lean_Path/PathFollow"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.451559, 0 )
script = ExtResource( 4 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}
skeleton_path = NodePath("../../../../BattleBot/Armature/Skeleton")
bone_name = "Chest"
look_at_axis = 2
additional_rotation = Vector3( -10, 0, 0 )

[node name="Camera" type="Camera" parent="KinematicBody/CameraHolder/Lean_Path/PathFollow/IK_LookAt_Chest"]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 0, 0, 0 )
fov = 74.0

[node name="Aim_pos" type="Spatial" parent="KinematicBody/CameraHolder/Lean_Path/PathFollow/IK_LookAt_Chest"]
transform = Transform( 0.999391, 0, -0.0348995, 0, 1, 0, 0.0348995, 0, 0.999391, 0.570504, -2.2654, 2.93826 )

[node name="IK_FABRIK" type="Spatial" parent="KinematicBody/CameraHolder/Lean_Path/PathFollow/IK_LookAt_Chest/Aim_pos"]
editor/display_folded = true
script = ExtResource( 6 )
__meta__ = {
"_editor_icon": ExtResource( 7 )
}
skeleton_path = NodePath("../../../../../../BattleBot/Armature/Skeleton")
bones_in_chain = PoolStringArray( "Left_UpperArm", "Left_LowerArm", "Left_Hand" )
bones_in_chain_lengths = PoolRealArray( 1.97, 3, 0.1 )
update_mode = 0
chain_iterations = 6
limit_chain_iterations = false
reset_iterations_on_update = false
use_middle_joint_target = true

[node name="target" type="Spatial" parent="KinematicBody/CameraHolder/Lean_Path/PathFollow/IK_LookAt_Chest/Aim_pos/IK_FABRIK"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.54883, -0.0335302, -0.934144 )

[node name="IK_LookAt" type="Spatial" parent="KinematicBody/CameraHolder/Lean_Path/PathFollow/IK_LookAt_Chest/Aim_pos/IK_FABRIK/target"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.300601, 0, 0.714191 )
script = ExtResource( 4 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}
skeleton_path = NodePath("../../../../../../../../BattleBot/Armature/Skeleton")
bone_name = "Left_Hand"
use_negative_our_rot = true
additional_rotation = Vector3( 0, 0, 90 )

[node name="middle_joint_target" type="Spatial" parent="KinematicBody/CameraHolder/Lean_Path/PathFollow/IK_LookAt_Chest/Aim_pos/IK_FABRIK"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.85263, -2.91316, -2.77555 )

[node name="Left_UpperArm" type="Spatial" parent="KinematicBody/CameraHolder/Lean_Path/PathFollow/IK_LookAt_Chest/Aim_pos/IK_FABRIK"]
transform = Transform( -0.985848, -0.0154234, 0.16693, -0.0140715, 0.999858, 0.00927825, -0.167049, 0.00679813, -0.985925, 1.5529, -1.84646, -6.07288 )

[node name="Left_LowerArm" type="Spatial" parent="KinematicBody/CameraHolder/Lean_Path/PathFollow/IK_LookAt_Chest/Aim_pos/IK_FABRIK"]
transform = Transform( -0.980952, 0.0992109, 0.167001, 0.116307, 0.988573, 0.0958931, -0.155579, 0.11349, -0.981282, 1.2349, -1.86413, -4.19466 )

[node name="Left_Hand" type="Spatial" parent="KinematicBody/CameraHolder/Lean_Path/PathFollow/IK_LookAt_Chest/Aim_pos/IK_FABRIK"]
transform = Transform( -0.962426, 0.0909643, 0.255854, 0.128209, 0.982809, 0.132853, -0.23937, 0.160664, -0.957543, 0.737802, -2.14957, -1.27378 )

[node name="IK_FABRIK_RightArm" type="Spatial" parent="KinematicBody/CameraHolder/Lean_Path/PathFollow/IK_LookAt_Chest/Aim_pos"]
script = ExtResource( 6 )
__meta__ = {
"_editor_icon": ExtResource( 7 )
}
skeleton_path = NodePath("../../../../../../BattleBot/Armature/Skeleton")
bones_in_chain = PoolStringArray( "Right_UpperArm", "Right_LowerArm", "Right_Hand" )
bones_in_chain_lengths = PoolRealArray( 1.97, 3, 0.1 )
update_mode = 0
chain_iterations = 3
limit_chain_iterations = false
reset_iterations_on_update = false
use_middle_joint_target = true

[node name="target" type="Spatial" parent="KinematicBody/CameraHolder/Lean_Path/PathFollow/IK_LookAt_Chest/Aim_pos/IK_FABRIK_RightArm"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.285662, -0.0335302, -1.05271 )

[node name="IK_LookAt" type="Spatial" parent="KinematicBody/CameraHolder/Lean_Path/PathFollow/IK_LookAt_Chest/Aim_pos/IK_FABRIK_RightArm/target"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00396007, 0, 0.834561 )
script = ExtResource( 4 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}
skeleton_path = NodePath("../../../../../../../../BattleBot/Armature/Skeleton")
bone_name = "Right_Hand"
use_negative_our_rot = true
additional_rotation = Vector3( 0, 0, 90 )

[node name="middle_joint_target" type="Spatial" parent="KinematicBody/CameraHolder/Lean_Path/PathFollow/IK_LookAt_Chest/Aim_pos/IK_FABRIK_RightArm"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.73318, -2.91316, -2.77555 )

[node name="Right_UpperArm" type="Spatial" parent="KinematicBody/CameraHolder/Lean_Path/PathFollow/IK_LookAt_Chest/Aim_pos/IK_FABRIK_RightArm"]

[node name="Right_LowerArm" type="Spatial" parent="KinematicBody/CameraHolder/Lean_Path/PathFollow/IK_LookAt_Chest/Aim_pos/IK_FABRIK_RightArm"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.85263, -2.91316, -2.77555 )

[node name="Right_Hand" type="Spatial" parent="KinematicBody/CameraHolder/Lean_Path/PathFollow/IK_LookAt_Chest/Aim_pos/IK_FABRIK_RightArm"]

[node name="RemoteTransform" type="RemoteTransform" parent="KinematicBody/CameraHolder/Lean_Path/PathFollow/IK_LookAt_Chest/Aim_pos"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.505047, 0.268441 )
remote_path = NodePath("../../../../../Weapon/Pistol")

[node name="IK_LookAt_Head" type="Spatial" parent="KinematicBody/CameraHolder/Lean_Path/PathFollow"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.14041, -2.57003 )
script = ExtResource( 4 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}
skeleton_path = NodePath("../../../../BattleBot/Armature/Skeleton")
bone_name = "Head"

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody/CameraHolder"]
autoplay = "Start"
playback_speed = 4.0
anims/Aiming = SubResource( 12 )
anims/Idle = SubResource( 13 )
anims/Start = SubResource( 14 )

[node name="Weapon" type="Spatial" parent="KinematicBody/CameraHolder"]

[node name="Pistol" parent="KinematicBody/CameraHolder/Weapon" instance=ExtResource( 8 )]
transform = Transform( 0.999391, 0, -0.0348995, 0, 1, 0, 0.0348995, 0, 0.999391, 0.519895, -1.10362, 3.20654 )

[node name="Pistol_textured" parent="KinematicBody/CameraHolder/Weapon/Pistol" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
material/0 = ExtResource( 9 )
material/1 = ExtResource( 10 )

[node name="Pistol_end" type="Spatial" parent="KinematicBody/CameraHolder/Weapon/Pistol"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0161836, 0.315914, 1.41329 )

[node name="BattleBot" parent="KinematicBody" instance=ExtResource( 11 )]
editor/display_folded = true

[node name="godot_battle_bot" parent="KinematicBody/BattleBot/Armature/Skeleton" index="0"]
material/0 = ExtResource( 12 )
material/1 = ExtResource( 13 )


[editable path="KinematicBody/CameraHolder/Weapon/Pistol"]

[editable path="KinematicBody/BattleBot"]
